--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="livedaitingchat.online.mem">
+    package="test_livedaitingchat.online.mem">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name=".MApplication"
+        android:name="test_livedaitingchat.online.mem.MApplication"
         android:usesCleartextTraffic="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
@@ -14,9 +14,9 @@
         android:theme="@style/Theme.LiveDatingChatOnlineMeetup"
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round">
-        <activity android:name=".MainWebActivity"
+        <activity android:name="test_livedaitingchat.online.mem.MainWebActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".SplashActivity"
+        <activity android:name="test_livedaitingchat.online.mem.SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,11 +24,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
+        <activity android:name="test_livedaitingchat.online.mem.MainActivity"
             android:screenOrientation="portrait">
 
         </activity>
-        <activity android:name=".TermsActivity"
+        <activity android:name="test_livedaitingchat.online.mem.TermsActivity"
             android:screenOrientation="portrait" />
     </application>
 
